--- a/rf_test/log.html
+++ b/rf_test/log.html
@@ -1732,28 +1732,28 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,31],[],[[4,0,1,0,[],[1,27,2],[[0,5,6,0,7,8,0,0,[1,28,0],[],[[28,2,8]]]]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[0,0,278],[],[[4,0,1,0,[],[0,257,9,5],[[0,6,0,0,0,0,0,0,[0,264,0],[],[[264,5,5]]]]],[7,0,1,0,[],[0,269,6,8],[[0,9,0,0,0,0,0,0,[0,274,0],[],[[274,5,8]]]]]],[],[2,0,2,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\Users\\Administrator\\git\\guest\\rf_test\\test.robot","*test.robot","*testcase","*Log","*BuiltIn","*<p>Logs the given message with the given level.\x3c/p>","*robot framework"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test If","*C:\\Users\\Administrator\\git\\guest\\rf_test\\test_if.robot","*test_if.robot","*testget","*No keyword with name '${payload}= Create Dictionary eid=1' found.","*${payload}= Create Dictionary eid=1","*testpost","*No keyword with name '${header} Create Dictionary Content-Type=application/json' found.","*${header} Create Dictionary Content-Type=application/json"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Test","name":"Test","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":2,"label":"Critical Tests","pass":0},{"elapsed":"00:00:00","fail":2,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:00","fail":2,"id":"s1","label":"Test If","name":"Test If","pass":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1525318334171;
+window.output["baseMillis"] = 1525321065102;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 346;
+window.output["generated"] = 299;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"FAIL","reportURL":"report.html","splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
