--- a/rf_test/report.html
+++ b/rf_test/report.html
@@ -1582,22 +1582,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,31],[],[[4,0,1,0,[],[1,27,2],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[0,0,278],[],[[4,0,1,0,[],[0,257,9,5],[]],[6,0,1,0,[],[0,269,6,7],[]]],[],[2,0,2,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\Users\\Administrator\\git\\guest\\rf_test\\test.robot","*test.robot","*testcase"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test If","*C:\\Users\\Administrator\\git\\guest\\rf_test\\test_if.robot","*test_if.robot","*testget","*No keyword with name '${payload}= Create Dictionary eid=1' found.","*testpost","*No keyword with name '${header} Create Dictionary Content-Type=application/json' found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"Test","name":"Test","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":2,"label":"Critical Tests","pass":0},{"elapsed":"00:00:00","fail":2,"label":"All Tests","pass":0}],[],[{"elapsed":"00:00:00","fail":2,"id":"s1","label":"Test If","name":"Test If","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1525318334171;
+window.output["baseMillis"] = 1525321065102;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 346;
+window.output["generated"] = 299;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
